fix: footer on small screens and scroll on small screens

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -4,7 +4,7 @@
 
 footer {
   z-index:10;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-self: center;
   align-items: center;
@@ -22,4 +22,10 @@ footer {
   font-family: "Poppins";
   font-weight: normal;
   font-size: 13px;
+}
+
+@media (min-height: 780px) {
+  footer {
+    display: flex;
+  }
 }
